# tea-lang

./: .gitignore  .prototools  AGENTS.md  Cargo.toml  LICENSE  Makefile  OPTIMIZATION_ROADMAP.md  README.md  STDLIB_MIGRATION_SUMMARY.md  STDLIB_TEA_MIGRATION.md  TEA_STDLIB_COMPLETE.md  TEA_STDLIB_MIGRATION.md  install.sh  package.json
.beads/: .gitignore  issues.jsonl  tea-lang.db  tee-lang.db
.claude/: launch.json
.codex/environments/: environment.toml
.github/workflows/: pr-ci.yml  release.yml
.hooks/: post-checkout  post-merge  pre-commit
.husky/: post-checkout  post-merge  pre-commit
benchmarks/: README.md  closures.tea  closures_simple.tea  const_math.tea  const_test.tea  dicts.tea  fib.js  fib.tea  fib_lto.stub.rs  lists.tea  loops.tea  math.tea  reference_fib.rs  reference_loops.rs  simple_tail.tea  strings.tea  structs.tea  tail_recursion.tea  tail_test.tea
benchmarks/js/: dicts.js  fib.js  loops.js  math.js  strings.js
benchmarks/rust/: dicts.rs  fib.rs  loops.rs  math.rs  strings.rs  structs.rs
benchmarks/tea/: closures.tea  closures_simple.tea  const_math.tea  const_test.tea  dicts.tea  fib.tea  list_len.tea  loops.tea  math.tea  strings.tea  tail_recursion.tea
docs/: AST_MIGRATION.md  CODEGEN.md  JS_COMPARISON.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_ANALYSIS.md  README.md  ROADMAP.md  STDLIB_INTRINSICS_ANALYSIS.md  STDLIB_MIGRATION_SUMMARY.md  STDLIB_PATH_MIGRATION.md  aot-backend.md  aot-llvm-plan.md  ast.yaml  cli-stdlib-roadmap.md  examples.md  faq.md  getting-started.md  intrinsics-reference.md  maintainer-guide.md  new-stdlib.md  optimization-opportunities.md  semantics.md  stdlib-reference.md  stdlib-removals.md  tea-lsp-setup.md  tokens.toml  type-checking.md
docs/explanation/: aot-backend.md  aot-llvm-implementation.md  compiler-codegen.md  static-llvm-embedding.md  zero-dependency-implementation.md
docs/guide/: advanced.md  basics.md  control-flow.md  data-structures.md  error-handling.md
docs/how-to/: building-vendor-artifacts.md  lsp-setup.md  single-binary-usage.md
docs/maintenance/: BETA_RELEASE_TODO.md  DOMAINS.md  QUICKSTART-DOMAINS.md  RELEASE_CHECKLIST.md  new-stdlib.md
docs/migrations/: ast-migration.md
docs/project/: CHANGELOG.md  CONTRIBUTING.md
docs/reference/: builtins.md  standard-library.md
docs/rfcs/: aot-llvm-plan.md
docs/roadmap/: cli-stdlib.md  project-roadmap.md
examples/: README.md  assertions.tea  basics.tea  conditionals.tee  dicts.tea  fib.tea  generics.tea  http-server.tea  http-server.tee  lambdas.tea  lists.tea  loops.tea  loops.tee  structs.tea  test.tee  test_small_list.tea  test_small_string.tea
examples/cli/: env.tea  fs.tea  parse.tea  path_utils.tea  process.tea
examples/control_flow/: logical.tea  unless.tea
examples/echo/: README.md  main.tea
examples/full/: team_scoreboard.tea
examples/functions/: locals.tea
examples/grep/: README.md  main.tea
examples/modules/: another.tea  helpers.tea  use_helpers.tea
examples/numeric/: floats.tea  modulo.tea
examples/stdlib/: comprehensive_stdlib_test.tea  env_helpers.tea  env_test.tea  fs_helpers.tea  intrinsics_fs_test.tea  math_functions.tea  math_showcase.tea  path_functions.tea  path_utilities.tea  string_functions.tea  test_path_simple.tea  test_simple.tea  (+3 more)
scripts/: bench.sh  build-bundled-tea.sh  codegen-ast.js  codegen-highlights.js  e2e.sh  install.sh  release.mjs  release.test.mjs  setup-worktree.sh  setup.sh  update-reference-manifest.sh  with-rust-toolchain.sh
spec/: README.md  ast.yaml  grammar.ebnf  tokens.toml
stdlib/: README.md  STDLIB_PLAN.md
tea-cli/: Cargo.toml  build.rs
tea-cli/src/: bundled.rs  main.rs
tea-cli/tests/: diagnostics.rs  errors.rs  fmt.rs  io.rs  snapshots.rs  test_cmd.rs
tea-compiler/: Cargo.toml  build.rs
tea-compiler/src/: analysis.rs  ast.rs  browser.rs  compiler.rs  diagnostics.rs  expansion.rs  formatter.rs  lib.rs  loader.rs  reference.rs  resolver.rs  source.rs  stdlib_snapshot.rs  typechecker.rs
tea-compiler/src/aot/: helpers.rs  intrinsics.rs  mod.rs  types.rs
tea-compiler/src/lexer/: mod.rs
tea-compiler/src/parser/: mod.rs
tea-compiler/src/runtime/: bytecode.rs  cli.rs  codegen.rs  intrinsics.rs  mod.rs  value.rs  vm.rs
tea-compiler/src/runtime/intrinsics_impl/: assert.rs  env.rs  fs.rs  mod.rs  path.rs  string.rs  util.rs
tea-compiler/src/stdlib/: args.rs  assert.rs  builtins.rs  cli.rs  debug.rs  docs.rs  env.rs  fs.rs  intrinsics.rs  io.rs  json.rs  mod.rs  path.rs  print.rs  process.rs  regex.rs  util.rs  yaml.rs
tea-compiler/tests/: aot_examples.rs  browser_target.rs  docstrings.rs  formatter.rs  module_imports.rs  optionals.rs  parse_examples.rs  resolver.rs  runtime_append_builtin.rs  runtime_args.rs  runtime_cli.rs  runtime_compound_assignment.rs  runtime_const.rs  runtime_dict_iteration.rs  runtime_enums.rs  runtime_env.rs  runtime_errors.rs  runtime_for_loop.rs  runtime_fs.rs  runtime_http.rs  runtime_if_expressions.rs  runtime_json_yaml.rs  runtime_lambdas.rs  runtime_list_methods.rs  runtime_match.rs  runtime_parse.rs  runtime_path.rs  runtime_process.rs  runtime_stdlib.rs  runtime_strings.rs  runtime_structs.rs  runtime_tests.rs  runtime_time.rs  stdlib_embedding.rs  type_errors.rs  typechecker_properties.proptest-regressions  typechecker_properties.rs
tea-compiler/tests/support/: mod.rs
tea-eval/: Cargo.toml
tea-eval/src/: lib.rs
tea-eval/tests/: browser_eval.rs
tea-intrinsics/: Cargo.toml
tea-llvm-vendor/: Cargo.toml  LLVM-LICENSE.txt  build.rs
tea-llvm-vendor/src/: lib.rs
tea-lsp/: Cargo.toml
tea-lsp/src/: main.rs
tea-runtime/: Cargo.toml
tea-runtime/src/: cli.rs  lib.rs
tea-support/: Cargo.toml
tea-web/: Cargo.toml
tea-web/src/: lib.rs
tests/: assertions.tea  snapshots.tea
tree-sitter-tea/: .gitignore  README.md  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-tea/bindings/rust/: Cargo.toml  build.rs  lib.rs
tree-sitter-tea/bindings/rust/src/: lib.rs
www/: .gitignore  README.md  mdx-components.tsx  next.config.mjs  package.json
(+222 files in other folders)
