[workspace]
resolver = "2"
members = [
  "tea-cli",
  "tea-compiler",
  "tea-lsp",
  "tea-runtime",
  "tea-support",
]
# tea-llvm-vendor is excluded by default - only build when LLVM libs are vendored
exclude = [
  "tea-llvm-vendor",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["tea-lang contributors"]
repository = "https://github.com/bentruyman/tea-lang"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1"
