[package]
name = "tea-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tea-compiler = { path = "../tea-compiler" }
dirs-next = "2"
pathdiff = "0.2"
tempfile = "3"
flate2 = "1.0"
hmac = "0.12"
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
