[package]
name = "tea-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["llvm-backend"]
llvm-backend = ["dep:dirs-next", "dep:glob", "dep:inkwell", "dep:tea-intrinsics", "dep:walkdir"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
glob = { version = "0.3", optional = true }
walkdir = { version = "2", optional = true }
inkwell = { version = "0.5.0", optional = true, default-features = false, features = ["llvm17-0"] }
tea-support = { path = "../tea-support" }
tea-intrinsics = { path = "../tea-intrinsics", optional = true }
path-clean = "1"
pathdiff = "0.2"
dirs-next = { version = "2", optional = true }

[dev-dependencies]
proptest = "1.4"
tempfile = "3"
