[package]
name = "tea-eval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde_json = "1"
tea-compiler = { path = "../tea-compiler", default-features = false }

[dev-dependencies]
tea-compiler = { path = "../tea-compiler", default-features = false }
