[package]
name = "tea-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
anyhow.workspace = true
serde_json = "1"
serde_yaml = "0.9"
glob = "0.3"
tempfile = "3"
walkdir = "2"
tea-support = { path = "../tea-support" }
tea-intrinsics = { path = "../tea-intrinsics" }
path-clean = "1"
pathdiff = "0.2"
dirs-next = "2"
regex = "1"
