[package]
name = "tea-web"
version = "0.0.2"
edition = "2021"
license = "MIT"
authors = ["tea-lang contributors"]
repository = "https://github.com/bentruyman/tea-lang"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tea-compiler = { path = "../tea-compiler", default-features = false }
tea-eval = { path = "../tea-eval" }
wasm-bindgen = "0.2"
