[package]
name = "tree-sitter-tea"
version = "0.1.0"
edition = "2021"
description = "Tree-sitter grammar for the Tea programming language."
license = "MIT"
repository = "https://github.com/bentruyman/tea-lang"
keywords = ["parser", "tree-sitter", "tea"]
categories = ["parsing", "text-editors"]
build = "build.rs"

[lib]
path = "src/lib.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
tree-sitter = "0.22"
